# az-func-container-cpp

./: .gitignore  README.md
.azure/configuration/: function.bicep  function.parameters.json
service/: CMakeLists.txt  CMakePresets.json  Dockerfile  vcpkg.json
service/src/: App.cpp  App.hpp  AppComponent.hpp  CMakeLists.txt  DTO.hpp  ExampleController.hpp
